src/Base/main/default/objects/Lead/fields/hubspot_Opted_Out_Email_Marketing_Info__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Opted_Out_Email_Marketing_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Marketing Info</label>
    <type>Checkbox</type>
</CustomField>