src/Base/main/default/objects/Lead/fields/hubspot_Opted_out_of_Email_One_to_One__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Opted_out_of_Email_One_to_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted out of Email: One to One</label>
    <type>Checkbox</type>
</CustomField>