src/Base/main/default/objects/Lead/fields/hubspot_Original_Source_drill_down_2__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Original_Source_drill_down_2__c</fullName>
    <label>Original Source drill-down 2</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>