src/Base/main/default/objects/Lead/fields/hubspot_Owner_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Owner_Assigned_Date__c</fullName>
    <label>Owner Assigned Date</label>
    <type>DateTime</type>
</CustomField>