src/Base/main/default/objects/Lead/fields/hubspot_Persona__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Persona</fullName>
            </value>
            <value>
                <fullName>Family Fisherman</fullName>
            </value>
            <value>
                <fullName>Hard Core Fisherman</fullName>
            </value>
            <value>
                <fullName>Entertainer</fullName>
            </value>
            <value>
                <fullName>Backwoods Fisherman</fullName>
            </value>
            <value>
                <fullName>Hardcore/All Weather Fisherman</fullName>
            </value>
            <value>
                <fullName>I live to fish. Rain or shine, when I get a free minute I&apos;m casting a line.</fullName>
            </value>
            <value>
                <fullName>I love to fish and do some tubing/wakeboarding/skiing with family and friends.</fullName>
            </value>
            <value>
                <fullName>I live to fish. Rain or shine, but I do enjoy the comfort of a full windshield and top.</fullName>
            </value>
            <value>
                <fullName>I love to entertain and share time with family and friends.</fullName>
            </value>
            <value>
                <fullName>I like to grab my utility boat, and go to my favourite lakes to do some fishing.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>