src/Base/main/default/objects/Lead/fields/hubspot_plan_to_purchase__c.field-meta.xml
<CustomField>
    <fullName>hubspot_plan_to_purchase__c</fullName>
    <label>When do you plan on purchasing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 3 months</fullName>
            </value>
            <value>
                <fullName>3 to 6 months</fullName>
            </value>
            <value>
                <fullName>6 to 12 months</fullName>
            </value>
            <value>
                <fullName>12+ months</fullName>
            </value>
            <value>
                <fullName>Not considering the purchase of a boat at this time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>