src/Base/main/default/objects/Lead/fields/hubspot_Prenom__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Prenom__c</fullName>
    <label>Prénom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>