src/Base/main/default/objects/Lead/fields/hubspot_Read__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Read__c</fullName>
    <label>Read</label>
    <length>255</length>
    <type>Text</type>
</CustomField>