src/Base/main/default/objects/Lead/fields/hubspot_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Received_Date__c</fullName>
    <label>Received Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>