src/Base/main/default/objects/Lead/fields/hubspot_Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Conversion__c</fullName>
    <label>Recent Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>