src/Base/main/default/objects/Lead/fields/hubspot_Recent_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Conversion_Date__c</fullName>
    <label>Recent Conversion Date</label>
    <type>DateTime</type>
</CustomField>