src/Base/main/default/objects/Lead/fields/hubspot_Recent_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Deal_Amount__c</fullName>
    <label>Recent Deal Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>