src/Base/main/default/objects/Lead/fields/hubspot_Recent_Deal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Deal_Close_Date__c</fullName>
    <label>Recent Deal Close Date</label>
    <type>DateTime</type>
</CustomField>