src/Base/main/default/objects/Lead/fields/hubspot_Recent_Sales_Email_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Sales_Email_Open_Date__c</fullName>
    <label>Recent Sales Email Open Date</label>
    <type>DateTime</type>
</CustomField>