src/Base/main/default/objects/Lead/fields/hubspot_Recent_Sales_Email_Replied_date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Sales_Email_Replied_date__c</fullName>
    <label>Recent Sales Email Replied Date</label>
    <type>DateTime</type>
</CustomField>