src/Base/main/default/objects/Lead/fields/hubspot_Recent_Sales_Emails_Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Recent_Sales_Emails_Clicked_Date__c</fullName>
    <label>Recent Sales Emails Clicked Date</label>
    <type>DateTime</type>
</CustomField>