src/Base/main/default/objects/Lead/fields/hubspot_Referrer__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Referrer__c</fullName>
    <label>Referrer</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>