src/Base/main/default/objects/Lead/fields/hubspot_Registered_At__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Registered_At__c</fullName>
    <label>Registered At</label>
    <type>DateTime</type>
</CustomField>