src/Base/main/default/objects/Lead/fields/hubspot_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Relationship_Status__c</fullName>
    <label>Relationship Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>