src/Base/main/default/objects/Lead/fields/hubspot_Salutation__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Salutation__c</fullName>
    <label>Salutation Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>