src/Base/main/default/objects/Lead/fields/hubspot_School__c.field-meta.xml
<CustomField>
    <fullName>hubspot_School__c</fullName>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>