src/Base/main/default/objects/Lead/fields/Hubspot_Score__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Score__c</fullName>
    <description>Lead Score generated by Hubspot</description>
    <label>Hubspot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>