src/Base/main/default/objects/Lead/fields/hubspot_Score_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Score_on_Lead__c</fullName>
    <label>Hubspot Score on Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>