src/Base/main/default/objects/Lead/fields/Hubspot_Sends_Since_Last_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Sends_Since_Last_Engagement__c</fullName>
    <label>Hubspot Sends Since Last Engagement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>