src/Base/main/default/objects/Lead/fields/hubspot_Seniority__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Seniority__c</fullName>
    <label>Seniority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>