src/Base/main/default/objects/Lead/fields/hubspot_State_Province__c.field-meta.xml
<CustomField>
    <fullName>hubspot_State_Province__c</fullName>
    <label>State/Province Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>