src/Base/main/default/objects/Lead/fields/hubspot_Status__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Status__c</fullName>
    <label>Status Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>