src/Base/main/default/objects/Lead/fields/hubspot_subscribe_legend_newsletter__c.field-meta.xml
<CustomField>
    <fullName>hubspot_subscribe_legend_newsletter__c</fullName>
    <description>Actual name in hubspot:

Subscribe to Receive Legend Boats Newsletter</description>
    <label>Subscribe to Legend Boats Newsletter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>