src/Base/main/default/objects/Lead/fields/hubspot_Time_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Time_First_Seen__c</fullName>
    <label>Time First Seen</label>
    <type>DateTime</type>
</CustomField>