src/Base/main/default/objects/Lead/fields/hubspot_Time_of_First_Session__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Time_of_First_Session__c</fullName>
    <label>Time of First Session</label>
    <type>DateTime</type>
</CustomField>