src/Base/main/default/objects/Lead/fields/hubspot_Time_Registration_Email_Was_Sent__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Time_Registration_Email_Was_Sent__c</fullName>
    <label>Time Registration Email Was Sent</label>
    <type>DateTime</type>
</CustomField>