src/Base/main/default/objects/Lead/fields/hubspot_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>