src/Base/main/default/objects/Lead/fields/hubspot_Trailer_Description__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Trailer_Description__c</fullName>
    <label>Trailer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>