src/Base/main/default/objects/Lead/fields/hubspot_Twitter_Bio__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Twitter_Bio__c</fullName>
    <label>Twitter Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>