src/Base/main/default/objects/Lead/fields/hubspot_Twitter_User_Name__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Twitter_User_Name__c</fullName>
    <label>Twitter User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>