src/Base/main/default/objects/Lead/fields/hubspot_Unsubscribed_from_all_Email__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Unsubscribed_from_all_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed from all Email</label>
    <type>Checkbox</type>
</CustomField>