src/Base/main/default/objects/Lead/fields/hubspot_updates_from_Legend__c.field-meta.xml
<CustomField>
    <fullName>hubspot_updates_from_Legend__c</fullName>
    <description>Actual name in Hubspot:

Yes I would like to receive updates from Legend Boats</description>
    <label>Yes, I would like to receive updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>