src/Base/main/default/objects/Lead/fields/hubspot_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Website_URL__c</fullName>
    <label>Website URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>