src/Base/main/default/objects/Lead/fields/hubspot_Work_Email__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Work_Email__c</fullName>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>