src/Base/main/default/objects/Lead/fields/hubspot_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>