src/Base/main/default/objects/Lead/fields/hubspot_Your_Boat_or_Pontoon_Model__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Your_Boat_or_Pontoon_Model__c</fullName>
    <label>Your Boat or Pontoon Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>