src/Base/main/default/objects/Lead/fields/IP_City__c.field-meta.xml
<CustomField>
    <fullName>IP_City__c</fullName>
    <description>Field to allow for tracking the lead&apos;s city as determined by IP in Hubspot</description>
    <label>IP City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>