src/Base/main/default/objects/Lead/fields/Is_Current_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Lead_Owner__c</fullName>
    <formula>IF(OwnerId =$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Lead Owner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>