src/Base/main/default/objects/Lead/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set by HubSpot to be true if we are trying to capture a lead that will be converted into a person account</description>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>