src/Base/main/default/objects/Lead/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <formula>ActivityMetric.LastCallDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>