src/Base/main/default/objects/Lead/fields/Last_Email_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Date_AM__c</fullName>
    <formula>ActivityMetric.LastEmailDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Email Date (AM)</label>
    <type>DateTime</type>
</CustomField>