src/Base/main/default/objects/Lead/fields/Last_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Email__c</fullName>
    <description>Name of last marketing email sent</description>
    <label>Last Marketing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>