src/Base/main/default/objects/Lead/fields/Last_Marketing_Email_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Email_Open_Date__c</fullName>
    <description>Last date a marketing email was opened</description>
    <label>Last Marketing Email Open Date</label>
    <type>DateTime</type>
</CustomField>