src/Base/main/default/objects/Lead/fields/Last_Marketing_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Marketing_Email_Send_Date__c</fullName>
    <description>Last date a marketing email was sent</description>
    <label>Last Marketing Email Send Date</label>
    <type>DateTime</type>
</CustomField>