src/Base/main/default/objects/Lead/fields/LegendUser__c.field-meta.xml
<CustomField>
    <fullName>LegendUser__c</fullName>
    <description>Temporary field which logs the legend user who created the lead from the external app &#39;Legend Connect&#39;</description>
    <label>LegendUser</label>
    <type>Email</type>
</CustomField>