src/Base/main/default/objects/Lead/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <formula>HYPERLINK(&quot;http://www.linkedin.com/pub/dir/&quot;+ FirstName+&quot;/&quot;+LastName , IMAGE(&quot;/resource/trac_LinkedIn&quot;, &quot;LinkedIn&quot;) , &quot;_new&quot;)</formula>
    <label>LinkedIn</label>
    <type>Text</type>
</CustomField>