src/Base/main/default/objects/Lead/fields/Lsst_Call_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Lsst_Call_Date_AM__c</fullName>
    <formula>ActivityMetric.LastCallDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lsst Call Date (AM)</label>
    <type>DateTime</type>
</CustomField>