src/Base/main/default/objects/Lead/fields/Marketing_Cloud_Notes__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>