src/Base/main/default/objects/Lead/fields/Marketing_Cloud_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Session_ID__c</fullName>
    <description>Used in Marketing Cloud</description>
    <label>Marketing Cloud Session ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>