src/Base/main/default/objects/Lead/fields/Military_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Status__c</fullName>
    <label>Military Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>