src/Base/main/default/objects/Lead/fields/MotorModel__c.field-meta.xml
<CustomField>
    <fullName>MotorModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the model of the motor that the customer is most interested in</description>
    <label>Motor Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Motor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads (Motor Model)</relationshipLabel>
    <relationshipName>LeadMotorModels</relationshipName>
    <type>Lookup</type>
</CustomField>