src/Base/main/default/objects/Lead/fields/Now_in_Hubspot_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Now_in_Hubspot_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether it is in a Hubspot Workflow or not currently</description>
    <label>Now in Hubspot Workflow</label>
    <type>Checkbox</type>
</CustomField>