src/Base/main/default/objects/Lead/fields/Number_of_Times_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Contacted__c</fullName>
    <label>Number of Times Contacted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>