src/Base/main/default/objects/Lead/fields/PartnerEmail__c.field-meta.xml
<CustomField>
    <fullName>PartnerEmail__c</fullName>
    <label>PartnerEmail</label>
    <type>Email</type>
</CustomField>