src/Base/main/default/objects/Lead/fields/phn_Next_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>phn_Next_Activity_Date__c</fullName>
    <label>Next Activity Date</label>
    <type>DateTime</type>
</CustomField>