src/Base/main/default/objects/Lead/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <formula>State</formula>
    <label>Province</label>
    <type>Text</type>
</CustomField>