src/Base/main/default/objects/Lead/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchased at Dealer</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Attempted to Contact</fullName>
            </value>
            <value>
                <fullName>Bad Timing</fullName>
            </value>
            <value>
                <fullName>Rejected - No Potential</fullName>
            </value>
            <value>
                <fullName>Rejected - Bad Data</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Purchased an Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>