src/Base/main/default/objects/Lead/fields/trac_Log_Call__c.field-meta.xml
<CustomField>
    <fullName>trac_Log_Call__c</fullName>
    <formula>HYPERLINK(&quot;/00T/e?followup=1&amp;who_id=&quot; + Id + &quot;&amp;retURL=/&quot; + Id + &quot;&amp;tsk5=Call Logged with &quot; + FirstName + &quot; &quot; + LastName + &quot;&amp;tsk4=&quot; + TEXT(DAY(TODAY())) + &quot;/&quot; + TEXT(MONTH(TODAY())) + &quot;/&quot; + TEXT(YEAR(TODAY())) + &quot;&amp;tsk12=Completed&quot;, IMAGE(&quot;/resource/trac_QuickActions/Phone.png&quot;,&quot;Call&quot;) , &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Call</label>
    <type>Text</type>
</CustomField>