src/Base/main/default/objects/Lead/fields/trac_Quick_Actions__c.field-meta.xml
<CustomField>
    <fullName>trac_Quick_Actions__c</fullName>
    <formula>trac_Log_Call__c &amp; &apos;  &apos; &amp; trac_LVM__c &amp; &apos;  &apos; &amp;  trac_Set_Meeting__c &amp; &apos; &apos; &amp; trac_Set_Task__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Green - Log a call
Blue - Left a message
Red - Set a new meeting
Purple - Create a new task</inlineHelpText>
    <label>Quick Actions</label>
    <type>Text</type>
</CustomField>