src/Base/main/default/objects/Lead/fields/What_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_interested_in__c</fullName>
    <label>What are you interested in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boats</fullName>
            </value>
            <value>
                <fullName>Pontoons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>